stores routes complete

--- a/public/sass/partials/_layout.scss
+++ b/public/sass/partials/_layout.scss
@@ -5,6 +5,7 @@ html {
 body {
   background: $purple;
   background:#efefef;
+  padding-bottom: 5rem;
   &:before {
     content: '';
     display: block;
