--- a/views/map.pug
+++ b/views/map.pug
@@ -1,10 +1,10 @@
 extends layout
 
-block content 
+block content
   .inner
-    h2= "Map"
+    h2= title
     .map
       .autocomplete
-        input.autocomplete__input(type="text" placeholder="Search for anything" name="geolocate")
+        input.autocomplete__input(type="text" placeholder="Search for Anything" name="geolocate")
       #map
         p Loading Map...
