--- a/views/mixins/_loginForm.pug
+++ b/views/mixins/_loginForm.pug
@@ -2,7 +2,7 @@ mixin loginForm()
   form.form(action="/login" method="POST")
     h2 Login
     label(for="email") Email Address
-    input(type="email" name="email" required)
+    input(type="email" name="email")
     label(for="password") Password
-    input(type="password" name="password" required)
+    input(type="password" name="password")
     input.button(type="submit" value="Log In →")
