--- a/views/register.pug
+++ b/views/register.pug
@@ -5,11 +5,11 @@ block content
     form.form(action="/register" method="POST")
       h2 Register
       label(for="name") Name
-      input(required type="text" name="name")
+      input(type="text" name="name")
       label(for="email") Email
-      input(required type="email" name="email")
+      input(type="email" name="email")
       label(for="password") Password
-      input(required type="password" name="password")
+      input(type="password" name="password")
       label(for="password-confirm") Confirm Password
-      input(required type="password" name="password-confirm")
+      input(type="password" name="password-confirm")
       input.button(type="submit" value="Register →")
